--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  setup:
+  run_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -30,10 +30,5 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
-
-  run_tests:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
       - name: Launch Test
-        run: mvn clean test --file pom.xml
+        run: mvn clean test
