--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,8 @@ jobs:
       # Workflow telemetry
       - name: Collect Workflow Telemetry
         uses: runforesight/workflow-telemetry-action@v1
+        with:
+          metric_frequency: 1
       # Launch the tests
       - name: Launch Test
         run: mvn clean test
