--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
-selenium = "*"
+requests = "2.31.0"
+selenium = "4.14.0"
 pytest = "7.4.2"
 pipfile = "*"
+psutil = "5.9.5"
 
 [dev-packages]
 
