--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,6 +59,6 @@ jobs:
           cd src/test/Ruby; bundle install
       # Launch the tests
       - name: Launch Java Test
-        run: python telemetry.py
+        run: pipenv run python telemetry.py
         env:
           TARGET_LANGUAGE: java
