--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,6 +17,10 @@ on:
 jobs:
   run_tests:
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 1
+      matrix:
+        language: [java, java_comp, c_sharp, c_sharp_comp, js, python, ruby]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -58,11 +62,10 @@ jobs:
         run: |
           cd src/test/Ruby; bundle install
       # Launch the tests
-      # TODO: use a build matrix to parametrize runs across all five languages
       - name: Launch Java Test
         run: pipenv run python telemetry.py
         env:
-          TARGET_LANGUAGE: java
+          TARGET_LANGUAGE: ${{ matrix.language }}
       - name: Upload test result artifacts
         uses: actions/upload-artifact@v3
         with:
