Pipeline: add conditionals to setup steps

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,25 +23,30 @@ jobs:
         language: [java, java_comp, c_sharp, c_sharp_comp, js, python, ruby]
     steps:
       - uses: actions/checkout@v3
+      - name: Install Google Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
       - uses: actions/setup-java@v3
+        if: ${{ matrix.language == "java" || matrix.language == "java_comp" }}
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
       - name: Install Maven
+        if: ${{ matrix.language == "java" || matrix.language == "java_comp" }}
         run: sudo apt-get install -y maven
-      - name: Install Google Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
       - name: Set up .NET core
+        if: ${{ matrix.language == "c_sharp" || matrix.language == "c_sharp_comp" }}
         run: |
           sudo apt-get install -y dotnet-sdk-7.0
       - name: Set up node.js
+        if: ${{ matrix.language == "js" }}
         uses: actions/setup-node@v3
         with:
           node-version: 18.18.1
       - name: Download npm dependencies
+        if: ${{ matrix.language == "js" }}
         run: |
           cd src/test/JavaScript; npm install; cd -
       - name: Set up python
@@ -55,14 +60,16 @@ jobs:
         run: |
           pipenv install
       - name: Set up ruby
+        if: ${{ matrix.language == "ruby" }}
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2'
       - name: Download ruby dependencies
+        if: ${{ matrix.language == "ruby" }}
         run: |
           cd src/test/Ruby; bundle install
       # Launch the tests
-      - name: Launch Java Test
+      - name: Launch ${{ matrix.language }} Test
         run: pipenv run python telemetry.py
         env:
           TARGET_LANGUAGE: ${{ matrix.language }}
