--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,8 +38,10 @@ jobs:
         run: sudo apt-get install -y maven
       - name: Set up .NET core
         if: ${{ matrix.language == 'c_sharp' || matrix.language == 'c_sharp_comp' }}
-        run: |
-          sudo apt-get install -y dotnet-sdk-7.0
+        uses: actions/setup-dotnet@v3.2.0
+        with:
+          dotnet-version: 7.0
+          dotnet-quality: ga
       - name: Set up node.js
         if: ${{ matrix.language == 'js' }}
         uses: actions/setup-node@v3
