--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,8 +14,9 @@ on:
   pull_request:
     branches: [ "master" ]
   schedule:
-    # This schedule follows the California time (PDT [UTC-7])
-    - cron: '*/10 01,07,13,19 * * *'
+    # This schedule follows the California time (PDT [UTC-7]).
+    # Schedule on PDT: 08:00, 14:00, 20:00, 02:00
+    - cron: '*/10 15,21,03,09 * * *'
 
 jobs:
   run_tests:
