--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ on:
   schedule:
     # This schedule follows the California time (PDT [UTC-7]).
     # Schedule on PDT: 08:00, 14:00, 20:00, 02:00
-    - cron: '*/10 15,21,03,09 * * *'
+    # - cron: '*/10 15,21,03,09 * * *'
 
 jobs:
   run_tests:
