--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,18 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
-            <version>1.1.1</version>
+            <version>5.9.3</version>
         </dependency>
     </dependencies>
+
+    <build>
+      <plugins>
+	<plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+	    <version>3.1.2</version>
+	</plugin>
+      </plugins>
+    </build>
 
 </project>
