--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,10 +13,10 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-  # schedule:
+  schedule:
     # This schedule follows the California time (PDT [UTC-7]).
     # Schedule on PDT: 08:00, 14:00, 20:00, 02:00
-    # - cron: '*/10 15,21,03,09 * * *'
+    - cron: '*/10 15,21,03,09 * * *'
 
 jobs:
   run_tests:
@@ -82,7 +82,7 @@ jobs:
       - name: Upload test result artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: test-run
+          name: real-test-run
           path: |
             *.csv
       - name: Clean up; delete already uploaded csv files
