--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,14 +9,14 @@
 name: Java CI with Maven
 
 on:
-  push:
-    branches: [ "master" ]
+  # push:
+  #   branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-  schedule:
-    # This schedule follows the California time (PDT [UTC-7]).
-    # Schedule on PDT: 08:00, 14:00, 20:00, 02:00
-    - cron: '*/10 15,21,03,09 * * *'
+  # schedule:
+  #   # This schedule follows the California time (PDT [UTC-7]).
+  #   # Schedule on PDT: 08:00, 14:00, 20:00, 02:00
+  #   - cron: '*/10 15,21,03,09 * * *'
 
 jobs:
   run_tests:
