Add timeout of 10 minutes for running the tests
This is to prevent the weird scenario with C# where the tests hang indefinitely and waste hours of runtime.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -77,6 +77,7 @@ jobs:
       # Launch the tests
       - name: Launch ${{ matrix.language }} Test
         run: pipenv run python telemetry.py
+        timeout-minutes: 10
         env:
           TARGET_LANGUAGE: ${{ matrix.language }}
       - name: Upload test result artifacts
