Try to make the pipeline more persistent
Add `continue-on-error` parameter to the test launch step.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -78,6 +78,7 @@ jobs:
       - name: Launch ${{ matrix.language }} Test
         run: pipenv run python telemetry.py
         timeout-minutes: 10
+        continue-on-error: true
         env:
           TARGET_LANGUAGE: ${{ matrix.language }}
       - name: Upload test result artifacts
